Prepare Ajax request

--- a/first_project/using_fetch.html
+++ b/first_project/using_fetch.html
@@ -27,6 +27,18 @@
        console.log(json)
      })
 
+     
+
+     fetch(
+       url, 
+       {
+         method: 'post', 
+         headers: {'Content-type': 'application/x-www-form-urlencoded; charset=UTF-8'}, 
+         body: {now: 1}
+       }
+     )
+
+
     }
 
 
